--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=2.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-        
+
         <link rel="stylesheet" href="./assets/css/index.css">
         <link rel="stylesheet" href="./assets/css/hljs.css">
     </head>
@@ -15,12 +15,14 @@
 
         <script src="./utils/components.js"></script>
         <script src="./utils/manifest.js"></script>
+        <script src="./utils/server_pinger.js"></script>
+
+        <script src="./routes/tools/manifest_generator.js"></script>
+        <script src="./routes/tools/server_pinger.js"></script>
+        <script src="./routes/tools/uuid_generator.js"></script>
 
         <script src="./routes/empty_route.js"></script>
-
         <script src="./routes/settings.js"></script>
-        <script src="./routes/uuid_generator.js"></script>
-        <script src="./routes/manifest_generator.js"></script>
         <script src="./routes/main.js"></script>
         
         <script src="./index.js"></script>
