Implemented Settings and fixed build issues

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="./assets/css/hljs.css">
     </head>
     <body>
+        <div class="popup" id="popup"></div>
         <div class="mainBackground"></div>
         <div id="app"></div>
         <script src="./assets/libs/highlight/highlight.min.js"></script>
@@ -21,7 +22,8 @@
         <script src="./routes/tools/server_pinger.js"></script>
         <script src="./routes/tools/uuid_generator.js"></script>
 
-        <script src="./routes/empty_route.js"></script>
+        <script src="./routes/modals/empty_route.js"></script>
+        <script src="./routes/modals/error_modal.js"></script>
         <script src="./routes/settings.js"></script>
         <script src="./routes/main.js"></script>
         
