MCStructure Converter and Discord RPC

--- a/src/index.html
+++ b/src/index.html
@@ -19,13 +19,14 @@
         <script src="./utils/server_pinger.js"></script>
 
         <script src="./routes/tools/manifest_generator.js"></script>
+        <script src="./routes/tools/mcstructure_converter.js"></script>
         <script src="./routes/tools/server_pinger.js"></script>
         <script src="./routes/tools/uuid_generator.js"></script>
 
         <script src="./routes/modals/empty_route.js"></script>
         <script src="./routes/modals/error_modal.js"></script>
         <script src="./routes/settings.js"></script>
-        <script src="./routes/main.js"></script>
+        <script src="./routes/main_screen.js"></script>
         
         <script src="./index.js"></script>
     </body>
