Fix tab click sounds. Started on loop generator

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
         <script src="./routes/tools/mcstructure_converter.js"></script>
         <script src="./routes/tools/server_pinger.js"></script>
         <script src="./routes/tools/id_generator.js"></script>
+        <script src="./routes/tools/loop_generator.js"></script>
 
         <script src="./routes/modals/empty_route.js"></script>
         <script src="./routes/modals/error_modal.js"></script>
