--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="./assets/css/hljs.css">
     </head>
     <body>
+        <div class="toast toastLeaving" id="toast"></div>
         <div class="popup" id="popup"></div>
         <div class="mainBackground"></div>
         <div id="app"></div>
