Removed the express server & Some small changes
- Made electron load the `index.html` file directly
- Small Changes to the Manifest Generator
- Started the work on the Commands Tester

--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,10 @@
 
         <script src="./utils/components.js"></script>
         <script src="./utils/manifest.js"></script>
+        <script src="./utils/minecraft_commands.js"></script>
         <script src="./utils/server_pinger.js"></script>
 
+        <script src="./routes/tools/commands_tester.js"></script>
         <script src="./routes/tools/id_generator.js"></script>
         <script src="./routes/tools/loop_generator.js"></script>
         <script src="./routes/tools/manifest_generator.js"></script>
