Basic Structure Viewer

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
         <script src="./utils/manifest.js"></script>
         <script src="./utils/minecraft_commands.js"></script>
         <script src="./utils/server_pinger.js"></script>
+        <script src="./utils/OrbitControls.js"></script>
 
         <script src="./routes/tools/commands_tester.js"></script>
         <script src="./routes/tools/id_generator.js"></script>
@@ -28,6 +29,7 @@
         <script src="./routes/tools/world_generator.js"></script>
         <script src="./routes/tools/render_offset_corrector.js"></script>
         <script src="./routes/tools/json_rawtext_generator.js"></script>
+        <script type="module" src="./routes/tools/structure_editor.js" ></script>
 
         <script src="./routes/modals/empty_route.js"></script>
         <script src="./routes/modals/error_modal.js"></script>
