Added structure lines + some new textures.

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
         <div class="mainBackground"></div>
         <div id="app"></div>
 
+        <script src="./utils//blocks.js"></script>
         <script src="./utils/components.js"></script>
         <script src="./utils/manifest.js"></script>
         <script src="./utils/minecraft_commands.js"></script>
@@ -29,7 +30,7 @@
         <script src="./routes/tools/world_generator.js"></script>
         <script src="./routes/tools/render_offset_corrector.js"></script>
         <script src="./routes/tools/json_rawtext_generator.js"></script>
-        <script type="module" src="./routes/tools/structure_editor.js" ></script>
+        <script src="./routes/tools/structure_editor.js" ></script>
 
         <script src="./routes/modals/empty_route.js"></script>
         <script src="./routes/modals/error_modal.js"></script>
