Added some new components & fixed some bugs
- Added a checkbox component
- Renamed the toggle component to "switch"
- Added a new toggle component
- Added a new style (purple) to the button component
- Fixed a bug where opening a new route would open it at the same scroll as the last route

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         <script src="./js/routes/settings.js"></script>
         <script src="./js/routes/main_screen.js"></script>
         
+        <script src="./js/routes/debug/components.js" ></script>
+        
         <script src="./js/index.js"></script>
     </body>
 </html>
