Some UI changes & fixes

--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
         <script src="./js/routes/tools/commands_tester.js"></script>
         <script src="./js/routes/tools/id_generator.js"></script>
         <script src="./js/routes/tools/loop_generator.js"></script>
-        <script src="./js/routes/tools/manifest_generator.js"></script>
+        <script src="./js/routes/tools/manifest_gen.js"></script>
         <script src="./js/routes/tools/structure_converter.js"></script>
         <script src="./js/routes/tools/server_pinger.js"></script>
         <script src="./js/routes/tools/world_generator.js"></script>
         <script src="./js/routes/tools/render_offset_corrector.js"></script>
         <script src="./js/routes/tools/json_rawtext_generator.js"></script>
         <script src="./js/routes/tools/structure_editor.js" ></script>
+        <script src="./js/routes/tools/mer.js" ></script>
 
         <script src="./js/routes/modals/empty_route.js"></script>
         <script src="./js/routes/modals/error_modal.js"></script>
