Added a facets system & fixed some bugs

--- a/index.html
+++ b/index.html
@@ -13,12 +13,7 @@
         <div class="popup" id="popup"></div>
         <div class="mainBackground"></div>
         <div id="app"></div>
-        <script src="./js/utils/blocks.js"></script>
-        <script src="./js/utils/components.js"></script>
-        <script src="./js/utils/discord_rpc.js"></script>
-        <script src="./js/utils/manifest.js"></script>
-        <script src="./js/utils/minecraft_commands.js"></script>
-        <script src="./js/utils/server_pinger.js"></script>
+        <script src="./js/facets.js"></script>
 
         <script src="./js/routes/tools/commands_tester.js"></script>
         <script src="./js/routes/tools/id_generator.js"></script>
@@ -38,7 +33,8 @@
         <script src="./js/routes/main_screen.js"></script>
         
         <script src="./js/routes/debug/components.js" ></script>
-        
+
+        <script src="./js/miscs/discord_rpc.js"></script>
         <script src="./js/index.js"></script>
     </body>
 </html>
