--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=2.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+        <link rel="stylesheet" href="./libs/@hatchibombotar-cubemap/index.css">
         <link rel="stylesheet" href="./css/hljs.css">
         <link rel="stylesheet" href="./css/index.css">
     </head>
